Make sure thanks page works on small screens

--- a/app/assets/stylesheets/partials/_backers.scss
+++ b/app/assets/stylesheets/partials/_backers.scss
@@ -196,3 +196,9 @@ $backer_green: #315D18;
     }
   }
 }
+
+.backers-thankyou {
+  p {
+    font-size: 1.2em;
+  }
+}
